--- a/src/routes/IndexPage.css
+++ b/src/routes/IndexPage.css
@@ -1,6 +1,7 @@
 
 .normal {
   font-family: Georgia, sans-serif;
-  margin-top: 3em;
-  font-size: 22px;
+  background-color: #6ecd56;
+  background-image: linear-gradient(142deg, #bdcd56, #96cd56 31%, #6ecd56 65%, #56cd66);
+  height: 100%;
 }
