--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 
 html, body, :global(#root) {
-  height: 100%;
+  font-family: Georgia, sans-serif;
+  background-color: #6ecd56;
+  background-image: linear-gradient(142deg, #bdcd56, #96cd56 31%, #6ecd56 65%, #56cd66);
 }
-
