--- a/src/routes/IndexPage.css
+++ b/src/routes/IndexPage.css
@@ -1,7 +1,5 @@
-
-.normal {
-  font-family: Georgia, sans-serif;
-  background-color: #6ecd56;
-  background-image: linear-gradient(142deg, #bdcd56, #96cd56 31%, #6ecd56 65%, #56cd66);
-  height: 100%;
+.footer {
+  background-color: #273032;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  height: 300px;
 }
