--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -2,3 +2,14 @@ img {
   width: 100%;
   height: 100%;
 }
+
+.subHeader {
+  text-align: center;
+  padding: 50px 0 50px 0;
+  color: #f16529;
+  font-size: 27px;
+}
+
+.smallCard {
+  height: 400px;
+}
