--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -3,13 +3,9 @@ img {
   height: 100%;
 }
 
-.subHeader {
-  text-align: center;
-  padding: 50px 0 50px 0;
-  color: #f16529;
-  font-size: 27px;
-}
-
-.smallCard {
-  height: 400px;
+.magazine {
+  background-color: #2b2b2b;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+  height: 300px;
+  margin-top: 30px;
 }
