--- a/src/components/MenuComponent.css
+++ b/src/components/MenuComponent.css
@@ -2,3 +2,10 @@
 .normal {
   width: 421px;
 }
+
+.colorBar {
+  background-color: rgba(0, 0, 0, 0.2);
+  background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.2));
+  border-radius: 3px 3px 0 0;
+  box-shadow: inset 0 -3px 3px rgba(0, 0, 0, 0.1), 0 -1px 0 rgba(255, 255, 255, 0.1);
+}
