--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -4,8 +4,11 @@ img {
 }
 
 .magazine {
-  background-color: #2b2b2b;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+  background-color: crimson;
+  background-image: linear-gradient(142deg, #dc147f, #dc145d 31%, crimson 65%, #dc141b);
+  color: #f4f1ce;
   height: 300px;
   margin-top: 30px;
+
+  text-align: center;
 }
