--- a/src/components/MenuComponent.css
+++ b/src/components/MenuComponent.css
@@ -6,6 +6,6 @@
 .colorBar {
   background-color: rgba(0, 0, 0, 0.2);
   background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.2));
-  border-radius: 3px 3px 0 0;
+  border-radius: 0 0 13px 13px;
   box-shadow: inset 0 -3px 3px rgba(0, 0, 0, 0.1), 0 -1px 0 rgba(255, 255, 255, 0.1);
 }
