--- a/src/routes/IndexPage.css
+++ b/src/routes/IndexPage.css
@@ -5,3 +5,14 @@
 
   text-align: center;
 }
+
+.backTopInner {
+  height: 40px;
+  width: 40px;
+  line-height: 40px;
+  border-radius: 4px;
+  background-color: #57c5f7;
+  color: #fff;
+  text-align: center;
+  font-size: 20px;
+}
